1999-08-20  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSSlider.m: added missing [self unlockFocus];.

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* Headers/NSAttributedString.h
		  NSLayoutManager.h
		  NSTableView.h: modifications, mostly added ivars.
	* Source/NSLayoutManager.m: implemented much code for layout and
	display.
	* Source/NSMenu.m: fixed some nagging problems. tearoffs should
	work almost universally. Positions are saved and restored. If you
	previous position exists for the main menu it goes to the upper
	left corner.
	* Source/NSMenuView.m: a few attempts to fix the "move to submenu"
	bugs.
	* Source/NSPopUpButton.m: many bug fixes and new implementations.
	Too many to list here.
	* Source/NSTableView.m: more code implemented, though I wouldn't
	recommend trying to use this class. :-)
	* Source/NSText.m: debugging code to help pinpoint which methods
	can be used in NSTextView and which have to be overridden.
	* Source/NSTextStorage.m: properly assigns itself to its
	layoutManager.
	* Source/NSTextView.m: more code additions to coincide with the
	new NSLayoutManager.

1999-08-03  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenu.m: commented out code which did multiple menu
	movement as it was breaking things. Need to rethink that.
	* Headers/NSTableColumn.h
        Headers/NSTableHeaderView.h  
	Headers/NSTableHeaderCell.h 
	Headers/NSTableView.h: added files.
	* Source/GNUMakefile: compile in NSTable classes.

1999-07-31  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSApplication.m: added patch by Pedro Ivo Andrade Tavares
	<ptavares@iname.com> to handle last window/application exit. This
	implementation mimics OpenStep 4.1.

1999-07-30  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenu.m: rewrote sections to handle new popupbutton
	code. New initialiser - initWithPopUpButton:. New ivar
	menu_isBeholdenToPopUpButton.
	* Source/NSMenuView.m: ditto. removed code that dealt with