@@ -1,6 +1,10 @@
 1999-08-20  Michael Hanni  <mhanni@sprintmail.com>
 
 	* Source/NSSlider.m: added missing [self unlockFocus];.
+	* Source/NSMenu.m: fixes to sizeToFit and update. This allows you
+	to keep the windows and services menus tornoff and when you rerun
+	the program these menus will look correct.
+	* Source/NSMenuView.m: ditto.
 
 1999-08-19  Michael Hanni  <mhanni@sprintmail.com>
 
